[package]
name = "tiered-result"
authors = ["person93 <person93.person93@gmail.com>"]
version = "0.1.0"
edition = "2021"
description = "A different approach to error handling"
license = "MIT"

[features]
std = ["nullable-result/std"]

[dependencies]
nullable-result = { version = "0.7.0", default_features = false, features = ["try_trait"] }
